--- a/package.json
+++ b/package.json
@@ -2,28 +2,42 @@
   "name": "growth-and-usage-dashboard",
   "version": "1.0.0",
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
+    "@babel/core": "7.10.2",
+    "@babel/preset-env": "7.10.2",
+    "@graph-paper/box": "0.0.0-alpha.13",
+    "@graph-paper/button": "0.0.0-alpha.13",
+    "@graph-paper/chip": "0.0.0-alpha.13",
+    "@graph-paper/core": "0.0.0-alpha.13",
+    "@graph-paper/datagraphic": "0.0.0-alpha.13",
+    "@graph-paper/elements": "0.0.0-alpha.13",
+    "@graph-paper/guides": "0.0.0-alpha.13",
+    "@graph-paper/stack": "0.0.0-alpha.13",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.1",
     "babel-jest": "^24.8.0",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint": "7.2.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-jest": "23.13.2",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-svelte3": "2.7.3",
     "immer": "^5.0.0",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "prettier-plugin-svelte": "^0.7.0",
-    "rollup": "^1.14.2",
+    "prettier": "2.0.5",
+    "prettier-plugin-svelte": "1.1.0",
+    "rollup": "2.16.1",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^4.2.4",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
-    "sirv-cli": "^0.4.3",
-    "svelte": "^3.6.4"
+    "rollup-plugin-livereload": "1.3.0",
+    "rollup-plugin-postcss": "^3.1.2",
+    "rollup-plugin-svelte": "5.2.2",
+    "rollup-plugin-terser": "6.1.0",
+    "sirv-cli": "1.0.0",
+    "svelte": "^3.23.2"
   },
   "scripts": {
     "build": "rollup -c",
