--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@graph-paper/guides": "0.0.0-alpha.13",
     "@graph-paper/stack": "0.0.0-alpha.13",
     "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
     "babel-jest": "^24.8.0",
     "eslint": "7.2.0",
