--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@graph-paper/datagraphic": "0.0.0-alpha.13",
     "@graph-paper/elements": "0.0.0-alpha.13",
     "@graph-paper/guides": "0.0.0-alpha.13",
+    "@graph-paper/portal": "0.0.0-alpha.13",
     "@graph-paper/stack": "0.0.0-alpha.13",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-json": "^4.1.0",
